--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -5,25 +5,10 @@ on:
     branches:
       - main
   pull_request:
-
+      - main
 jobs:
   test:
     runs-on: ubuntu-runner
-
-    services:
-      db:
-        image: postgres:13
-        env:
-          POSTGRES_USER: django
-          POSTGRES_PASSWORD: password
-          POSTGRES_DB: django_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd="pg_isready -U django"
-          --health-interval=10s
-          --health-timeout=5s
-          --health-retries=5
 
     steps:
     - name: Checkout Code
@@ -33,27 +18,15 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
-
+    - name: Install Docker
+      run: | 
+        sudo apt-get update 
+        sudo apt-get install -y docker.io
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
-    - name: Wait for Database
-      run: |
-        until pg_isready -h localhost -p 5432; do
-          echo "Waiting for database..."
-          sleep 1
-        done
-
-    - name: Run Migrations
-      env:
-        DATABASE_URL: postgres://django:password@localhost:5432/django_db
-      run: |
-        python manage.py migrate
-
     - name: Run Tests
-      env:
-        DATABASE_URL: postgres://django:password@localhost:5432/django_db
       run: |
         python manage.py test
