Docker image build

--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -30,3 +30,6 @@ jobs:
     - name: Run Tests
       run: |
         python manage.py test
+    -name: Build the Docker image
+     run:  |
+        docker build -t my-calc-django-app .
