--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -22,6 +22,12 @@ jobs:
       run: | 
         sudo apt-get update 
         sudo apt-get install -y docker.io
+        sudo usermod -aG docker $USER
+        newgrp docker
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+    
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
