--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -24,6 +24,7 @@ jobs:
         sudo apt-get install -y docker.io
         sudo usermod -aG docker $USER
         newgrp docker
+        sudo chown $USER:docker /var/run/docker.sock
     - name: Restart Docker Service 
       run: | 
         sudo systemctl restart docker
