had chnge the name

--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -43,4 +43,7 @@ jobs:
 
     - name: Build Docker Image
       run: |
-        docker build -t my-django-app .
+        docker build -t calc-back-image:latest .
+    - name: Running the container of the image
+      run: |
+        docker run --name The_calc_backend -it -p 8000:8000 calc-back-image:latest
