--- a/.github/workflows/django-test.yml
+++ b/.github/workflows/django-test.yml
@@ -1,10 +1,15 @@
 name: Django CI/CD
 
 on:
-  push:
-    branches:
-      - main
-  pull_request:
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: 'Branch to run the workflow'
+        required: true
+        default: 'main'
+      directory:
+        description: 'Directory to run the workflow'
+        required: false
 
 jobs:
   test:
